Moxy with Base ready

--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/mainEditText"
+            android:id="@+id/movieListEditText"
             android:layout_margin="@dimen/margin"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,14 +22,14 @@
             android:layout_margin="@dimen/margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/mainEditText"
-            android:id="@+id/mainTextView"
+            app:layout_constraintTop_toBottomOf="@id/movieListEditText"
+            android:id="@+id/movieListTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <Button
             android:text="Show"
-            android:id="@+id/mainButtonShowTxt"
+            android:id="@+id/movieListButtonShowTxt"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
